--- a/css/style.css
+++ b/css/style.css
@@ -24,6 +24,25 @@ p {
     line-height: 1.5;
 }
 
+button{
+    padding: 1vw 2vh;
+    border: 3px solid #1d1d1d;
+    border-radius: 5px;
+    background-color: transparent;
+    color: #FFFFFF;
+    font-weight: 600;
+
+}
+
+button:hover{
+    background-color: #1d1d1d;
+}
+
+button[type="submit"]{
+    background-color: #292929;
+    padding: 1vw 2vh;
+}
+
 a.button-default {
     display: block;
     padding: 10px 25px;
@@ -31,14 +50,14 @@ a.button-default {
     text-decoration: none;
     text-align: center;
     border-radius: 5px;
-    border: 3px solid #84a98c;
-    background-color: #84a98c;
+    border: 3px solid #292929;
+    background-color: #292929;
     position: relative;
 }
 
 a.button-default:hover {
     background-color: #FFFFFF;
-    color: #84a98c;
+    color: #292929;
 }
 
 #center-container {
@@ -73,8 +92,8 @@ nav img {
 }
 
 nav a:hover {
-    color: #84a98c;
-    border-bottom: 3px solid #84a98c;
+    color: #292929;
+    border-bottom: 3px solid #292929;
 }
 
 header {
@@ -88,7 +107,7 @@ header {
     min-height: 50vh;
 }
 
-header .left-column {
+header .head-column {
     flex: 2;
 }
 
@@ -97,7 +116,8 @@ header img {
     height: 250px;
     object-fit: cover;
     border-radius: 50%;
-    border: 3px solid #84a98c;
+    border: 3px solid #292929;
+    
 }
 
 header p {
@@ -110,12 +130,13 @@ main {
     margin: 0 auto;
 }
 
-.recipes-container {
+.items-container {
     display: flex;
     gap: 30px;
+    margin-bottom: 2vh;
 }
 
-.recipes-container article {
+.items-container article {
     flex: 1;
     display: flex;
     flex-direction: column;
@@ -125,13 +146,20 @@ main {
     border-radius: 1vw;
 }
 
-.recipes-container article img {
+.items-container article img {
     width: 100%;
     border-radius: 1vw;
 }
 
-.recipes-container article h3 {
+.items-container article h3 {
     margin-bottom: 0px;
+}
+
+.item-content {}
+
+.stars img{
+    max-width: 26px;
+    max-height: 26px;
 }
 
 
@@ -150,11 +178,14 @@ form {
     justify-content: space-between;
     flex-direction: row;
     margin-bottom: 1vw;
-    align-items: start;
 }
 
 .radio {
     display: flex;
+}
+
+.radio label[for="category"]{
+    padding-top: 18px;
 }
 
 .radio .formfield {
@@ -170,11 +201,13 @@ textarea {
     width: 100%;
 }
 
-#checkbox input,
-#checkbox label {
+#checkbox input {
     align-items: start;
 }
+#checkbox label{
+    width: 80vw;
 
+}
 
 /* voorbeeld: alle input elementen */
 
@@ -187,12 +220,14 @@ input {
 /* voorbeeld: alleen text input */
 
 input[type=text],
-input[type=email],
 input[type=date] {
     width: 40vw;
 }
 
-input[type=checkbox] {}
+input[type=email]{
+    width: 75vw;
+}
+
 
 input:invalid {
     border: 3px solid red;
@@ -209,16 +244,57 @@ input:invalid:not(:placeholder-shown) {
     border-radius: 5px;
 }
 
+footer {
+    margin-top: 5vh;
+    background-color: rgb(26 32 44);
+    color: #FFFFFF;
+    padding: 3vw 5vh;
+}
+
+footer .text {
+    display: flex;
+    gap: 20px;
+}
+
+footer a{
+    margin: 16px 0;
+    color: rgb(67, 71, 80);
+    text-decoration: none;
+}
+
+footer .logo img{
+    height: 5vh;
+}
+
+footer .socials img{
+    height: 3.5vh;
+}
+
+
+@media (min-width: 481px) {
+    .formfield label{
+        margin: 18px;
+        width: 10vw;
+    }
+
+}
 
 @media (max-width: 480px) {
+    body{
+        overflow-x: hidden;
+    }
     nav{
         position: relative;
     }
+    nav img {
+        position: relative;
+        height: 10vh;
+    }
     nav,
-    .recipes-container {
+    .items-container {
         flex-direction: column;
     }
-    .recipes-container img {
+    .items-container img {
         height: 40vw;
         object-fit: cover;
     }
@@ -228,11 +304,25 @@ input:invalid:not(:placeholder-shown) {
     main {
         width: 100vw;
     }
+    input[type=text],
+    input[type=email],
+    input[type=date] {
+        width: 80vw;
+    }
     .formfield{
         flex-direction: column;
         width: 80vw;
     }
-    .radio .formfield{
+    .radio .formfield, #checkbox {
         flex-direction: row;
+    }
+    .radio .formfield{
+        width: 45vw;
+    }
+    .radio{
+        flex-direction: column;
+    }
+    #checkbox{
+        padding: 1vh 1vw;
     }
 }
