--- a/css/style.css
+++ b/css/style.css
@@ -8,16 +8,16 @@ body {
 }
 
 h1 {
-    font-size: 48px;
+    font-size: 4rem;
     margin-top: 0;
 }
 
 h2 {
-    font-size: 36px;
+    font-size: 3rem;
 }
 
 h3 {
-    font-size: 28px;
+    font-size: 2rem;
 }
 
 p {
@@ -31,7 +31,6 @@ button{
     background-color: transparent;
     color: #FFFFFF;
     font-weight: 600;
-
 }
 
 button:hover{
@@ -58,11 +57,6 @@ a.button-default {
 a.button-default:hover {
     background-color: #FFFFFF;
     color: #292929;
-}
-
-#center-container {
-    width: 1000px;
-    margin: 0 auto;
 }
 
 nav {
@@ -92,8 +86,10 @@ nav img {
 }
 
 nav a:hover {
-    color: #292929;
-    border-bottom: 3px solid #292929;
+    color: #FFFFFF;
+    background-color: #292929;
+    border: none;
+    border-radius: 5px;
 }
 
 header {
@@ -116,8 +112,6 @@ header img {
     height: 250px;
     object-fit: cover;
     border-radius: 50%;
-    border: 3px solid #292929;
-    
 }
 
 header p {
@@ -146,16 +140,26 @@ main {
     border-radius: 1vw;
 }
 
-.items-container article img {
+
+.item-picture {
+    max-width: 30vw;
+    max-height: 40vh;
+}
+
+.item-picture img {
     width: 100%;
-    border-radius: 1vw;
+    max-height: 35vh;
+    object-fit: cover;
 }
 
 .items-container article h3 {
     margin-bottom: 0px;
 }
 
-.item-content {}
+.item-body p
+{
+    height: 15vh;
+}
 
 .stars img{
     max-width: 26px;
@@ -173,23 +177,52 @@ form {
     max-width: 650px;
 }
 
-.formfield {
+.formfield, .subfield {
     display: flex;
-    justify-content: space-between;
     flex-direction: row;
     margin-bottom: 1vw;
+    width: 100%;
+}
+.formfield label{
+    margin: 18px 0;
+    width: 10vw;
+}
+
+.subfield, #topic, #email{
+    flex-direction: column;
+}
+
+#firstname, #email, #city, #topic{
+    justify-content: start;
+    align-items: start;
+}
+
+#lastname, #birthdate {
+    justify-content: end;
+    align-items: end;
+}
+#lastname label, #birthdate label{
+    margin-left: 18px;
+}
+
+.subfield label {
+    align-self: flex-start;
 }
 
 .radio {
     display: flex;
+    flex-direction: column;
 }
 
 .radio label[for="category"]{
-    padding-top: 18px;
+    padding-bottom: 1vh;
 }
 
 .radio .formfield {
-    margin-left: 1vw;
+    flex-direction: column;
+}
+.radio .subfield {
+    display: inline;
 }
 
 #question {
@@ -211,21 +244,24 @@ textarea {
 
 /* voorbeeld: alle input elementen */
 
-input {
+input, select{
     font-size: 1rem;
     padding: 1vw 1vh;
 }
-
 
 /* voorbeeld: alleen text input */
 
 input[type=text],
 input[type=date] {
-    width: 40vw;
+    width: 95%;
 }
 
-input[type=email]{
-    width: 75vw;
+input[type=email], select{
+    width: 100%;
+}
+
+#submit{
+    width: 100%;
 }
 
 
@@ -254,6 +290,13 @@ footer {
 footer .text {
     display: flex;
     gap: 20px;
+    justify-content: space-between;
+}
+
+.links{
+    display: flex;
+    flex-direction: row;
+    gap: 2vw;
 }
 
 footer a{
@@ -268,15 +311,6 @@ footer .logo img{
 
 footer .socials img{
     height: 3.5vh;
-}
-
-
-@media (min-width: 481px) {
-    .formfield label{
-        margin: 18px;
-        width: 10vw;
-    }
-
 }
 
 @media (max-width: 480px) {
@@ -294,8 +328,13 @@ footer .socials img{
     .items-container {
         flex-direction: column;
     }
-    .items-container img {
+    .head-column p{
+        padding: 0;
+        margin-bottom: 2vh;
+    }
+    .item-picture img {
         height: 40vw;
+        width: 100vw;
         object-fit: cover;
     }
     #circleimage {
