--- a/css/style.css
+++ b/css/style.css
@@ -86,11 +86,17 @@ nav img {
     height: 2vw;
 }
 
-nav a:hover {
+nav a:hover:not(:first-child) {
     color: #FFFFFF;
     background-color: #292929;
     border: none;
     border-radius: 5px;
+}
+
+nav a:hover:first-child{
+    background-color: none;
+    border: none;
+    border-radius: none;
 }
 
 header {
@@ -149,7 +155,8 @@ main {
 
 .item-picture img {
     width: 100%;
-    max-height: 35vh;
+    min-height: 35vh;
+    max-height: 40vh;
     object-fit: cover;
 }
 
@@ -202,6 +209,7 @@ form {
     justify-content: end;
     align-items: end;
 }
+
 #lastname label, #birthdate label{
     margin-left: 18px;
 }
@@ -302,7 +310,7 @@ footer .text {
 
 footer a{
     margin: 16px 0;
-    color: rgb(67, 71, 80);
+    color: rgb(98, 105, 120);
     text-decoration: none;
 }
 
